WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247486
AX ITM: Fix for LayoutTests/accessibility/mac/search-predicate.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=247486
Summary
AX ITM: Fix for LayoutTests/accessibility/mac/search-predicate.html in isolat...
Andres Gonzalez
Reported
2022-11-04 06:00:16 PDT
rdar://98961891
Attachments
Patch
(43.23 KB, patch)
2022-11-04 06:24 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-11-04 06:00:29 PDT
<
rdar://problem/101956964
>
Andres Gonzalez
Comment 2
2022-11-04 06:24:00 PDT
Created
attachment 463401
[details]
Patch
EWS
Comment 3
2022-11-04 12:04:59 PDT
Committed
256331@main
(a1f882fe5f68): <
https://commits.webkit.org/256331@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 463401
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug