AX ITM: Fix for LayoutTests/accessibility/mac/search-predicate.html in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=247486 <rdar://problem/101956964>

Reviewed by Chris Fleizach.

- Added a test case to search for a misspelled word.
- Searching for misspellings was failing in ITM because AXIsolatedObject::hasMisspelling was not implemented. The implementation in this patch dispatches the call to the associated object on the main thread. A future refinement could cache this property and update it everytime text changes.

* LayoutTests/accessibility-isolated-tree/TestExpectations:
* LayoutTests/accessibility/mac/search-predicate-expected.txt:
* LayoutTests/accessibility/mac/search-predicate.html:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::hasMisspelling const):

Canonical link: https://commits.webkit.org/256331@main